--- a/nacionalen_park_pelister.html
+++ b/nacionalen_park_pelister.html
@@ -11,7 +11,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<a class="navbar-brand" href="nacionalen_park_pelister.html" title="Почетна">
-			<img src="file:///home/mateapeeva/Web%20Sites/NacionalenParkPelister/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
+			<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 			Национален Парк Пелистер
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -19,11 +19,11 @@
 				<a class="nav-item nav-link" href="zaPelister.html">За Пелистер</a>
 				<a class="nav-item nav-link" href="">За креаторот на веб страната</a>
 				<a href="nacionalen_park_pelister.html" title="Македонски">
-					<img style="margin-left: 750px" src="file:///home/mateapeeva/Web%20Sites/NacionalenParkPelister/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
+					<img style="margin-left: 750px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
 				<a href="national_park_pelister_eng.html" title="English">
 
-					<img style="margin-left: 15px" src="file:///home/mateapeeva/Web%20Sites/NacionalenParkPelister/united-kingdom.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
+					<img style="margin-left: 15px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 				</a>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 			</iframe>
 		</div>
 		<div style="width: 47%; float:right">
-			<img class="d-block img-fluid" style="margin-top: 50px; width: 100%; height: 400px;" src="/home/mateapeeva/Web Sites/NacionalenParkPelister/welcome_image_mk.png"/>
+			<img class="d-block img-fluid" style="margin-top: 50px; width: 100%; height: 400px;" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/welcome_image_mk.png"/>
 		</div>
 	</div>
 	<footer style="margin-top: 500px; border:black; border-width:2px; border-style:outset; border-bottom-width: 0px; border-right-width: 0px; border-left-width: 0px">
