--- a/nacionalen_park_pelister.html
+++ b/nacionalen_park_pelister.html
@@ -10,13 +10,13 @@
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="nacionalen_park_pelister.html" title="Почетна">
+		<a class="navbar-brand" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Почетна">
 			<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 			Национален Парк Пелистер
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="zaPelister.html">За Пелистер</a>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister.html">За Пелистер</a>
 				<a class="nav-item nav-link" href="">За креаторот на веб страната</a>
 				<a href="nacionalen_park_pelister.html" title="Македонски">
 					<img style="margin-left: 750px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
