--- a/zaPelister_eng.html
+++ b/zaPelister_eng.html
@@ -10,18 +10,18 @@
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="national_park_pelister_eng.html" title="Почетна">
+		<a class="navbar-brand" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="Почетна">
 			<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 			Pelister National Park
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="zaPelister.html">About Pelister</a>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister_eng.html">About Pelister</a>
 				<a class="nav-item nav-link" href="">About creator of the web site</a>
-				<a href="nacionalen_park_pelister.html" title="Македонски">
+				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
 					<img style="margin-left: 820px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
-				<a href="national_park_pelister_eng.html" title="English">
+				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
 
 					<img style="margin-left: 15px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 				</a>
