--- a/national_park_pelister_eng.html
+++ b/national_park_pelister_eng.html
@@ -11,19 +11,19 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<a class="navbar-brand" href="national_park_pelister_eng.html" title="Почетна">
-			<img src="file:///home/mateapeeva/Web%20Sites/NacionalenParkPelister/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
+			<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 			Pelister National Park
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="zaPelister_eng.html">About Pelister</a>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister_eng.html">About Pelister</a>
 				<a class="nav-item nav-link" href="">About creator of the web site</a>
-				<a href="nacionalen_park_pelister.html" title="Македонски">
-					<img style="margin-left: 820px" src="file:///home/mateapeeva/Web%20Sites/NacionalenParkPelister/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
+				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
+					<img style="margin-left: 820px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
-				<a href="national_park_pelister_eng.html" title="English">
+				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
 
-					<img style="margin-left: 15px" src="file:///home/mateapeeva/Web%20Sites/NacionalenParkPelister/united-kingdom.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
+					<img style="margin-left: 15px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 				</a>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 			</iframe>
 		</div>
 		<div style="width: 47%; float:right">
-			<img class="d-block img-fluid" style="margin-top: 50px; width: 100%; height: 400px;" src="/home/mateapeeva/Web Sites/NacionalenParkPelister/welcome_image_en.png"/>
+			<img class="d-block img-fluid" style="margin-top: 50px; width: 100%; height: 400px;" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/welcome_image_en.png"/>
 		</div>
 	</div>
 	<footer style="margin-top: 500px; border:black; border-width:2px; border-style:outset; border-bottom-width: 0px; border-right-width: 0px; border-left-width: 0px">
