--- a/nacionalen_park_pelister.html
+++ b/nacionalen_park_pelister.html
@@ -18,12 +18,12 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister.html">За Пелистер</a>
 				<a class="nav-item nav-link" href="">За креаторот на веб страната</a>
-				<a href="nacionalen_park_pelister.html" title="Македонски">
+				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
 					<img style="margin-left: 750px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
-				<a href="national_park_pelister_eng.html" title="English">
+				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
 
-					<img style="margin-left: 15px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
+					<img style="margin-left: 15px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 				</a>
 			</div>
 		</div>
