--- a/zaPelister_eng.html
+++ b/zaPelister_eng.html
@@ -38,7 +38,8 @@
 			We do not always give importance to the things that nature give us. My homeland, Macedonia, is full of beautiful places, such as the Pelister National Park.
 		</p>
 
-
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62469.43882740337!2d21.1730512044371!3d41.010864465792466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135724f96a99752b%3A0x46f5baa54c8ac5ec!2zTmF0aW9uYWwgUGFyayDigJ5QZWxpc3RlcuKAnA!5e0!3m2!1sen!2sde!4v1642172535527!5m2!1sen!2sde" width="780" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+		</iframe>
 
 		<p style="margin-left: 60px; margin-right: 60px; margin-top: 10px; font-size: 20px">
 			This national park is located on Baba Mountain, near the city, Bitola. It was declared a national park in 1948, and is the first national park in Macedonia.
