--- a/nacionalen_park_pelister.html
+++ b/nacionalen_park_pelister.html
@@ -18,8 +18,8 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister.html">За Пелистер</a>
 				<a class="nav-item nav-link" href="">За креаторот на веб страната</a>
-				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
-					<img style="margin-left: 50%" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="32" height="35" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
+					<img style="margin-left: 3000%" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="25" height="25" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
 				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
 
