--- a/nacionalen_park_pelister.html
+++ b/nacionalen_park_pelister.html
@@ -21,10 +21,8 @@
 				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
 					<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="25" height="25" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
-				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
-
-
-					<img style="margin-left: 100%" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="32" height="35" class="d-inline-block align-top" alt=""/>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
+					<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="25" height="25" class="d-inline-block align-top" alt=""/>
 				</a>
 			</div>
 		</div>
