--- a/national_park_pelister_eng.html
+++ b/national_park_pelister_eng.html
@@ -16,14 +16,13 @@
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister_eng.html">About Pelister</a>
-				<a class="nav-item nav-link" href="">About creator of the web site</a>
-				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
-					<img style="margin-left: 820px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="30" height="30" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister.html">За Пелистер</a>
+				<a class="nav-item nav-link" href="">За креаторот на веб страната</a>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
+					<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="25" height="25" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
-				<a href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
-
-					<img style="margin-left: 15px" src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/national_park_pelister_eng.html" title="English">
+					<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/united-kingdom.png" width="25" height="25" class="d-inline-block align-top" alt=""/>
 				</a>
 			</div>
 		</div>
