--- a/national_park_pelister_eng.html
+++ b/national_park_pelister_eng.html
@@ -10,13 +10,13 @@
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="national_park_pelister_eng.html" title="Почетна">
+		<a class="navbar-brand" href="national_park_pelister_eng.html" title="Home Page">
 			<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/forest.png" width="30" height="30" class="d-inline-block align-top" alt=""/>
 			Pelister National Park
 		</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister.html">About Pelister</a>
+				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister_eng.html">About Pelister</a>
 				<a class="nav-item nav-link" href="">About creator of the web site</a>
 				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
 					<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="25" height="25" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
