--- a/zaPelister.html
+++ b/zaPelister.html
@@ -90,7 +90,7 @@
 		<br><br><br>
 
 
-		<h2 style="margin-left: 60px">Хидро</h2>
+		<h2 style="margin-left: 60px">Хидрологија</h2>
 		<p style="margin-left: 60px; margin-right: 60px; margin-top: 50px; font-size: 20px">
 			Пелистер изобилува и со извори, потоци и планински реки кои се распределени низ целата територија на истиот, а има и две глацијални езера. Од реките би ја спомнала реката Шемница која е најдолг водотек на Пелистер со должина од 46 км. Глацијалните езера се Големото и Малото Езеро кои уште се наречени „Пелистерски Очи“ Едно од друго се оддалечени отприлика 2 км. Тие спаѓаат и во групата на постојани езера. Специфично за Големото Езеро е тоа што е едно од највисоките глацијални езера во Македонија. Во пелистерските езера живеат ендемичната пелистерска поточна пастрмка и пелагониската поточна пастрмка.
 		</p>
