--- a/nacionalen_park_pelister.html
+++ b/nacionalen_park_pelister.html
@@ -17,7 +17,7 @@
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/zaPelister.html">За Пелистер</a>
-				<a class="nav-item nav-link" href="">За креаторот на веб страната</a>
+				<a class="nav-item nav-link" href="">За мене</a>
 				<a class="nav-item nav-link" href="https://mateapeeva.github.io/pelisterNationalParkWebSite/nacionalen_park_pelister.html" title="Македонски">
 					<img src="https://mateapeeva.github.io/pelisterNationalParkWebSite/republic-of-macedonia.png" width="25" height="25" class="d-inline-block align-top" alt="" href="nacionalen_park_pelister.html"/>
 				</a>
